// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > renders correctly with current page prop 1`] = `
.c0 {
  display: flex;
}

.c3 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 16px;
  height: 16px;
}

.c3 svg {
  width: 100%;
  height: 100%;
}

.c7 {
  font-family: CircularXX;
  font-size: 14px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c5 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c1 {
  align-items: center;
}

.c1 >button {
  margin-right: 4px;
}

.c1 >button:last-child {
  margin-right: 0;
}

.c6 {
  background: #f1e9dc;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c6:hover {
  background-color: #f1e9dc;
}

.c6:active {
  background-color: #f8f2ea;
}

.c6:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c4 {
  background: #ffffff;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c4:hover {
  background-color: #f1e9dc;
}

.c4:active {
  background-color: #f8f2ea;
}

.c4:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c2 {
  cursor: pointer;
}

.c2:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

@media (min-width: 0px) {
  .c0 {
    flex-direction: row;
  }
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <button
        aria-label="previous-page"
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-arrow-left"
            data-icon="arrow-left"
            data-prefix="far"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M7 239c-9.4 9.4-9.4 24.6 0 33.9L175 441c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9L81.9 280 488 280c13.3 0 24-10.7 24-24s-10.7-24-24-24L81.9 232 209 105c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0L7 239z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          1
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          2
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          3
        </p>
      </button>
      <button
        class="c6"
      >
        <p
          class="c7"
          cursor="inherit"
          title=""
        >
          4
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          5
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          ...
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          12
        </p>
      </button>
      <button
        aria-label="next-page"
        class="c2"
      >
        <span
          class="c3"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-arrow-right"
            data-icon="arrow-right"
            data-prefix="far"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M505 273c9.4-9.4 9.4-24.6 0-33.9L337 71c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l127 127-406.1 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l406.1 0-127 127c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0L505 273z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Pagination > renders correctly with default props 1`] = `
.c0 {
  display: flex;
}

.c7 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 16px;
  height: 16px;
}

.c7 svg {
  width: 100%;
  height: 100%;
}

.c3 {
  font-family: CircularXX;
  font-size: 14px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c5 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c1 {
  align-items: center;
}

.c1 >button {
  margin-right: 4px;
}

.c1 >button:last-child {
  margin-right: 0;
}

.c2 {
  background: #f1e9dc;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c2:hover {
  background-color: #f1e9dc;
}

.c2:active {
  background-color: #f8f2ea;
}

.c2:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c4 {
  background: #ffffff;
  cursor: pointer;
  display: flex;
  justify-content: center;
  border-radius: 24px;
  width: fit-content;
  padding: 0px 4px;
  height: 24px;
  min-width: 24px;
}

.c4:hover {
  background-color: #f1e9dc;
}

.c4:active {
  background-color: #f8f2ea;
}

.c4:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c6 {
  cursor: pointer;
}

.c6:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

@media (min-width: 0px) {
  .c0 {
    flex-direction: row;
  }
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <button
        class="c2"
      >
        <p
          class="c3"
          cursor="inherit"
          title=""
        >
          1
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          2
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          3
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          4
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          5
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          ...
        </p>
      </button>
      <button
        class="c4"
      >
        <p
          class="c5"
          cursor="inherit"
          title=""
        >
          12
        </p>
      </button>
      <button
        aria-label="next-page"
        class="c6"
      >
        <span
          class="c7"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-arrow-right"
            data-icon="arrow-right"
            data-prefix="far"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M505 273c9.4-9.4 9.4-24.6 0-33.9L337 71c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l127 127-406.1 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l406.1 0-127 127c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0L505 273z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</body>
`;
